assets/eu_planet.h

    /*!
        设备类型
    */
    enum planet_DeviceType
    {
        planet_DeviceType_USBCAN2 = 4, /**< 创芯USB转CAN设备 */
        planet_DeviceType_Canable = 11 /**< 意优canable设备 */
    };
    /*!
        波特率
    */
    enum planet_Baudrate
    {
        planet_Baudrate_500 = 500,  /**< 波特率500 */
        planet_Baudrate_1000 = 1000 /**< 波特率1000 */
    };
    /*!
        初始化dll，调用其他函数前，必须先调用该函数进行初始化，初始化成功后设备自动打开
        \param devType 设备类型
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param channel 通道，该参数只针对创芯设备生效，设置0或1
        \param baudrate 波特率
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_initDLL(planet_DeviceType devType, int devIndex, int channel, planet_Baudrate baudrate);
    /*!
        关闭设备，释放资源，成功初始化设备后，需要在程序结束时调用该函数
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_freeDLL(int devIndex);
    /*!
        获得电机心跳状态
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param heartbeat 存放读取的心跳状态
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getHeartbeat(int devIndex, int id, bool *heartbeat, int timeout = 100);
    /*!
        获得电机序列号
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param serialNum 存放读取的电机序列号
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getSerialNumber(int devIndex, int id, unsigned *serialNum, int timeout = 100);
    /*!
        获得硬件版本号
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param hdVersion 存放读取的硬件版本号
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getHardwareVersion(int devIndex, int id, unsigned *hdVersion, int timeout = 100);
    /*!
        获得电机固件版本号
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param fmVersion 存放读取的固件版本号
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getFirmwareVersion(int devIndex, int id, unsigned *fmVersion, int timeout = 100);
    /*!
        获得电机电流值（q值）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param current 存放读取的电流值（q值）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getCurrent(int devIndex, int id, float *current, int timeout = 100);
    /*!
        获得电机速度（rpm）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param velocity 存放读取的电机速度（rpm）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getVelocity(int devIndex, int id, float *velocity, int timeout = 100);
    /*!
        获得电机位置（°）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param position 存放读取的电机位置（°）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getPosition(int devIndex, int id, float *position, int timeout = 100);
    /*!
        获得目标电流值（q值）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param current 存放读取的目标电流值（q值）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getTargetCurrent(int devIndex, int id, float *current, int timeout = 100);
    /*!
        设置目标电流值（q值）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param current 目标电流值（q值）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setTargetCurrent(int devIndex, int id, float current, int timeout = 100);
    /*!
        获得电机目标速度（rpm）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param velocity 存放读取的电机目标速度（rpm）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getTargetVelocity(int devIndex, int id, float *velocity, int timeout = 100);
    /*!
        设置电机目标速度（rpm）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param velocity 电机目标速度（rpm）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setTargetVelocity(int devIndex, int id, float velocity, int timeout = 100);
    /*!
        获得电机目标位置（°）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param position 存放读取的电机目标位置（°）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getTargetPosition(int devIndex, int id, float *position, int timeout = 100);
    /*!
        设置电机目标位置（°），该函数不适用于位置模式，位置模式下设置电机目标位置 参见:quick_setTargetPosition
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param position 电机目标位置（°）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setTargetPosition(int devIndex, int id, float position, int timeout = 100);
    /*!
        设置电机目标位置（°），该函数用于位置模式，实现快写，无需等待控制器返回确认，可以快速连续设置，实现轨迹规划
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param position 电机目标位置（°）
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_quick_setTargetPosition(int devIndex, int id, float position);
    /*!
        获得电机目标加速度（rpm/s）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param acc 存放读取的电机目标加速度（rpm/s）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getTargetAcceleration(int devIndex, int id, float *acc, int timeout = 100);
    /*!
        设置电机目标加速度（rpm/s）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param acc 电机目标加速度(rpm/s)
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setTargetAcceleration(int devIndex, int id, float acc, int timeout = 100);
    /*!
        获得电机目标减速度（rpm/s）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param dec 存放读取的电机目标减速度（rpm/s）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getTargetDeceleration(int devIndex, int id, float *dec, int timeout = 100);
    /*!
        设置电机目标减速度（rpm/s）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param dec 电机目标减速度（rpm/s）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setTargetDeceleration(int devIndex, int id, float dec, int timeout = 100);
    /*!
        获得电机控制模式
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param mode 存放读取的电机控制模式,模式如下:
            1:	轮廓位置控制模式
            3:	速度模式
            4:	电流模式
            5:	位置模式
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getMode(int devIndex, int id, int *mode, int timeout = 100);
    /*!
        设置电机控制模式
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param mode 电机模式，模式如下:
            1:	轮廓位置控制模式
            3:	速度模式
            4:	电流模式
            5:	位置模式
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setMode(int devIndex, int id, int mode, int timeout = 100);
    /*!
        获得电机使能状态
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param enable 存放读取的电机使能状态
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getEnabled(int devIndex, int id, bool *enable, int timeout = 100);
    /*!
        设置电机使能状态
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param enable 电机使能状态
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setEnabled(int devIndex, int id, bool enable, int timeout = 100);
    /*!
        获得电机停止状态
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param state 存放读取的电机停止状态
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getStopRunState(int devIndex, int id, bool *state, int timeout = 100);
    /*!
        设置电机停止状态
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param state 电机停止状态
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setStopRunState(int devIndex, int id, bool state, int timeout = 100);
    /*!
        获得电机的警告
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param alert 存放读取的电机警告
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getAlert(int devIndex, int id, int *alert, int timeout = 100);
    /*!
        获得电机最大速度值（rpm）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param velocity 存放读取的电机最大速度值（rpm）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_getMaxVelocity(int devIndex, int id, float *velocity, int timeout = 100);
    /*!
        设置电机最大速度值（rpm）
        \param devIndex 设备索引，第一个设备设置为0，第二个设备设置为1，以此类推
        \param id 电机id
        \param velocity 最大速度值（rpm）
        \param timeout 函数执行后，等待timeout毫秒来接收执行结果
        \return 执行成功返回CAN_SUCCESS，失败返回其他
    */
    EXTERNFUNC int planet_setMaxVelocity(int devIndex, int id, float velocity, int timeout = 100);